--- a/luci-theme-infinityfreedom/files/htdocs/css/style.css
+++ b/luci-theme-infinityfreedom/files/htdocs/css/style.css
@@ -158,7 +158,7 @@ tr:nth-of-type(2n) {
 }
 
 .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
-    font-family: Futura, 'Microsoft Yahei', sans-serif;
+    font-family: Futura, 'PingFang SC', 'Microsoft Yahei', sans-serif;
     font-weight: 500;
     line-height: 1.1;
     color: white;
@@ -181,7 +181,7 @@ body {
     margin: 0;
     padding: 0;
     height: 100%;
-    font-family: Futura, 'Microsoft Yahei', sans-serif;
+    font-family: Futura, 'PingFang SC', 'Microsoft Yahei', sans-serif;
     line-height: 150%;
     color: #ffffff;
     background: #07223e url('../images/main_bg.jpg') no-repeat fixed center;
@@ -221,7 +221,7 @@ input,
     height: 34px;
     line-height: normal;
     font-size: 1.2rem;
-    font-family: Futura, 'Microsoft Yahei', sans-serif;
+    font-family: Futura, 'PingFang SC', 'Microsoft Yahei', sans-serif;
     background-color: rgba(7, 34, 62, .4);
     transition: color 150ms ease, border-color 150ms ease, opacity 150ms ease;
     -webkit-transition: color 150ms ease, border-color 150ms ease, opacity 150ms ease;
@@ -445,9 +445,9 @@ header > .container > .brand {
 }
 
 .brandMark:after {
-    content: "®";
+    content: "";
     font-size: 14px;
-    font-family: Tahoma, sans-serif;
+    font-family: Futura, 'PingFang SC', 'Microsoft Yahei', sans-serif;
     position: absolute;
     top: -10px;
     font-weight: normal !important;
@@ -1566,7 +1566,7 @@ td > .ifacebadge,
     margin: 0;
     line-height: 120%;
     font-size: 1.2rem;
-    font-family: Futura, 'Microsoft Yahei', sans-serif;
+    font-family: Futura, 'PingFang SC', 'Microsoft Yahei', sans-serif;
     border: 1px solid #e4eaec;
     border-radius: 0;
     background-color: #2B2B2B; /*rgba(7,34,62,.5)*/;
@@ -1816,7 +1816,7 @@ small {
     background-color: rgba(7, 34, 62, .5);
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .16), 0 0 2px 0 rgba(0, 0, 0, .12);
     border: none;
-    font-family: Futura, 'Microsoft Yahei', sans-serif;
+    font-family: Futura, 'PingFang SC', 'Microsoft Yahei', sans-serif;
 }
 
 input[name="ping"],
@@ -1858,7 +1858,7 @@ header > .container > .pull-right > * {
     display: none;
     color: #76838f;
     content: "\e029";
-    font-family: Futura, 'Microsoft Yahei', sans-serif;
+    font-family: Futura, 'PingFang SC', 'Microsoft Yahei', sans-serif;
     font-weight: normal !important;
     font-size: 14px;
     top: 18px;
@@ -2017,7 +2017,7 @@ header > .container > .pull-right > * {
     background-color: rgba(7, 34, 62, .75); /*rgba(53,53,53,.9)*/
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .16), 0 0 2px 0 rgba(0, 0, 0, .12);
     border: none;
-    font-family: Futura, 'Microsoft Yahei', sans-serif;
+    font-family: Futura, 'PingFang SC', 'Microsoft Yahei', sans-serif;
     /* For FireFox */
     scrollbar-color: rgba(238, 238, 238, .5) rgba(50, 50, 50, .3);
     scrollbar-width: thin;
